try cuda in docker

--- a/Dockerfile.org
+++ b/Dockerfile.org
@@ -1,10 +1,10 @@
-FROM tensorflow/tensorflow:1.13.2-gpu
+FROM python:3.6
 
-WORKDIR /app
+WORKDIR /chars
 
 COPY requirements.txt requirements.txt
 
-RUN pip3 install -r requirements.txt
+RUN pip install -r requirements.txt
 
 EXPOSE 8008
 
@@ -12,4 +12,4 @@ COPY data/models/model-1557393970.7916455.h5 data/model.h5
 
 COPY src src
 
-CMD ["python3", "-m", "src.controller"]
+CMD ["python", "-m", "src.controller"]
